--- a/platform/docker_images/hostm/Dockerfile
+++ b/platform/docker_images/hostm/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:stretch
 RUN apt-get update && apt-get install -y rsyslog locales iputils-ping traceroute \
-  openssh-server vim tcpdump net-tools dnsutils iperf3 build-essential smcroute git
+  openssh-server vim tcpdump net-tools dnsutils iperf3 build-essential smcroute git python2.7 python3
 # Install cpanminus for bgpsimple
 
 # cpanminus and build-essential needed for this
